2008-03-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7944: htmlArea RTE: Configuration of mutually exclusive classes in very error prone
	* Fixed bug #7769: htmlArea RTE: Missing default class for tables

2008-03-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7934: HTMLArea RTE block style and text style may present disallowed classes

2008-03-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7923: htmlArea RTE cannot delete block via delete/backspace keys in IE6 and IE7

2008-03-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7918: HTMLArea RTE: table width unit default not honoured when width is not set

2008-03-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7886: JS error raised in htmlArea RTE in IE5.5 when setting inline markup or text style
	* Fixed bug #7880: Insert table and borders in htmlArea RTE
	* Fixed bug #7890: htmlArea RTE: premature undo snapshot may cause JavaScript error to be raised

2008-03-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7877: htmlArea RTE block style feature raises javascript errors in IE6
	* Fixed bug #7878: Extension cannot override a previously defined htmlArea RTE hotkey

2008-03-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7857: htmlArea RTE: hidePStyleItems does not work anymore
	* Fixed bug #7867: htmlArea RTE undo/redo does not restore caret position
	* Fixed bug #7857 (revisited): htmlArea RTE: hidePStyleItems does not work anymore
	* Fixed bug #7867 (revisited): htmlArea RTE undo/redo does not restore caret position

2008-03-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7862: htmlArea RTE: incorrect nesting of ol/ul inside definition lists

2008-03-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7851: htmlArea RTE causes memory leaks in IE
	* Fixed bug #7852: JS error raised in IE7 when closing htmlArea RTE
	* Fixed bug #7853: htmlArea RTE formatblock does not allow removing p or hx format in FF

2008-03-12  Stanislas Rolland  <typo3@sjbr.ca>
