@@ -1,3 +1,7 @@
+2008-03-28  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #7955: htmlArea RTE API provides incorrect popup url
+
 2008-03-26  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #7944: htmlArea RTE: Configuration of mutually exclusive classes in very error prone
